[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acorgdb"
version = "0.1.0"
description = "Tools for interacting with acorg antigen, antisera and titration databases."
readme = "readme.md"
authors = [
    {name = "David Pattinson", email = "david.pattinson@wisc.edu"},
]
maintainers = [
    {name = "David Pattinson", email = "david.pattinson@wisc.edu"},
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python",
]
dependencies = [
    "airium",
    "pandas",
    "regex",
    "pyyaml",
]

[project.urls]
Home = "https://github.com/acorg/acorgdb"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-subtests",
]

[tool.hatch.build.targets.wheel]
packages = ["acorgdb"]