[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "acorgdb"
dynamic = ["version"]
description = "Tools for interacting with acorg antigen, antisera and titration databases."
readme = "readme.md"
authors = [
    {name = "David Pattinson", email = "davipatti@protonmail.com"},
]
maintainers = [
    {name = "David Pattinson", email = "davipatti@protonmail.com"},
]
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python",
]
dependencies = [
    "airium",
    "pandas",
    "regex",
    "pyyaml",
]

[project.urls]
Home = "https://github.com/acorg/acorgdb"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-subtests",
]

[tool.setuptools_scm]
